# tuber-legacy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: create-diagram.yml  rust.yml
book/: book.toml
book/src/: SUMMARY.md
book/src/tutorial/: introduction.md  project-setup.md
crates/butter-core/: Cargo.toml
crates/butter-core/src/: transform.rs
crates/butter-ecs/src/: lib.rs
crates/tuber-core/: Cargo.toml
crates/tuber-core/src/: asset.rs  input.rs  lib.rs  tilemap.rs  transform.rs
crates/tuber-ecs/: Cargo.toml
crates/tuber-ecs/src/: bitset.rs  (+4 more)
crates/tuber-engine/: Cargo.toml
crates/tuber-engine/src/: engine_context.rs  lib.rs  state.rs
crates/tuber-engine/src/system_bundle/: graphics.rs
crates/tuber-graphics/: Cargo.toml
crates/tuber-graphics-wgpu/: Cargo.toml
crates/tuber-graphics/fonts/: default_font.json
crates/tuber-graphics/src/: animation.rs  bitmap_font.rs  camera.rs  color.rs  composition.rs  font.rs  g_buffer.rs  graphics.rs  immediate_gui.rs  lib.rs  low_level.rs  material.rs  quad_renderer.rs  render_graph.rs  render_resource.rs  resources.rs  shaders.rs  sprite.rs  texture.rs  textures.rs  tilemap.rs  types.rs  ui.rs  wgpu.rs  wgpu_state.rs
crates/tuber-graphics/src/low_level/: api.rs  composition.rs  draw_command.rs  g_buffer.rs  geometry.rs  light_renderer.rs  mesh.rs  mod.rs  model.rs  polygon_mode.rs  primitives.rs  quad_renderer.rs  renderer.rs  texture.rs  texture_store.rs  uniform_buffer.rs  utils.rs  vertex_buffer.rs  wgpu_state.rs
crates/tuber-graphics/src/low_level/buffers/: index_buffer.rs  mod.rs  uniform_buffer.rs  vertex_buffer.rs
crates/tuber-graphics/src/low_level/render_passes/: composition_pass.rs  geometry_pass.rs  lighting_pass.rs  mod.rs  pre_render_pass.rs  ui_pass.rs
crates/tuber-graphics/src/low_level/renderers/: light_renderer.rs  mesh_renderer.rs  mod.rs  quad_renderer.rs
crates/tuber-graphics/src/parsers/: mod.rs  obj_parser.rs
crates/tuber-graphics/src/renderable/: light.rs  mesh.rs  mod.rs  rectangle_shape.rs  shape.rs  sprite.rs  tilemap.rs
crates/tuber-graphics/src/shaders/: composition.wgsl  light.wgsl  mesh.wgsl  quad.wgsl  ui.wgsl
crates/tuber-gui/: Cargo.toml
crates/tuber-math/: Cargo.toml
crates/tuber-physics/: Cargo.toml
crates/tuber-proc-macros/: Cargo.toml
crates/tuber-winit/: Cargo.toml
crates/tuber-winit/src/: lib.rs
examples/bitmap-font/: main.rs
examples/camera/: main.rs
examples/collisions/: main.rs
examples/escape-orcs-2/: Cargo.toml  character.rs  game_state.rs  item.rs  keymap.json  main.rs  orc.rs  player.rs  terrain.rs
examples/game-state/: font.json  font_atlas.json  main.rs
examples/obj_parser/: Cargo.toml  main.rs
examples/perspective/: Cargo.toml  main.rs
examples/platformer/: main.rs
examples/rectangle/: Cargo.toml  main.rs
examples/snake/: Cargo.toml  keymap.json  main.rs
examples/sprite/: Cargo.toml  main.rs
examples/tennis/: Cargo.toml  main.rs
examples/tilemap/: main.rs
examples/ui/: main.rs
examples/window/: Cargo.toml  main.rs
examples/z-ordering/: main.rs
src/: lib.rs  winit.rs
(+50 files in other folders)
