[package]
name = "tuber"
version = "0.1.0"
authors = ["Clément Sibille <clement.sibille@protonmail.com>"]
edition = "2021"

[workspace]
members = ["crates/*", "examples/*"]

[dependencies]
tuber-core = { path = "crates/tuber-core", version = "0.1.0" }
tuber-graphics = { path = "crates/tuber-graphics", version = "0.1.0" }
tuber-winit = { path = "crates/tuber-winit", version = "0.1.0" }
tuber-engine = { path = "crates/tuber-engine", version = "0.1.0" }
tuber-ecs = { path = "crates/tuber-ecs", version = "0.1.0" }
tuber-math = { path = "crates/tuber-math", version = "0.1.0" }

[dev-dependencies]
rand = "0.8.3"
env_logger = "0.9.0"
