[package]
name = "tuber-core"
version = "0.1.0"
authors = ["Clément Sibille <claymeuns@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.27"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
tuber-math = { path = "../tuber-math" }
log = "0.4.14"