[package]
name = "tuber-engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuber-core = { path = "../tuber-core" }
tuber-ecs = { path = "../tuber-ecs" }
tuber-graphics = { path = "../tuber-graphics" }
log = "0.4.16"