[package]
name = "tuber-graphics"
version = "0.1.0"
authors = ["Clément Sibille <claymeuns@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuber-core = { path = "../tuber-core" }
tuber-ecs = { path = "../tuber-ecs" }
tuber-math = { path = "../tuber-math" }
futures = "0.3.19"
wgpu = "0.12"
raw-window-handle = "0.4"
image = "0.23.14"
bytemuck = { version = "1.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"