[package]
name = "tuber-graphics"
version = "0.1.0"
authors = ["Clément Sibille <claymeuns@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuber-core = { path = "../tuber-core" }
tuber-ecs = { path = "../tuber-ecs" }
raw-window-handle = "0.4.2"
wgpu = "0.13.1"
image = "0.24.2"
futures = "0.3.21"
log = "0.4.17"