[package]
name = "tuber-winit"
version = "0.1.0"
authors = ["Clément Sibille <claymeuns@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
winit = "0.26"
tuber-core = { path = "../tuber-core", version = "0.1.0" }
tuber-graphics = { path = "../tuber-graphics", version = "0.1.0" }
tuber-engine = { path = "../tuber-engine", version = "0.1.0" }
raw-window-handle = "0.4"
